# project-1

./: .cproject  .gitignore  .mxproject  .project  STM32H753XIHX_FLASH.ld  UiPwmPOC.ioc  flash_753.bat
Core/BSP/STM32H743I-EVAL/: stm32h743i_eval_bus.c  stm32h743i_eval_bus.c.bak  stm32h743i_eval_bus.h  stm32h743i_eval_io.c  stm32h743i_eval_io.h  stm32h743i_eval_lcd.c  stm32h743i_eval_lcd.h  stm32h743i_eval_qspi.c  stm32h743i_eval_ts.c  stm32h743i_eval_ts.c.bak  stm32h743i_eval_ts.h  stm32h743i_eval_ts.h.bak
Core/GeneratedCode/: Application.c  Application.h  Components.c  Components.h  Core.c  Core.h  Device.c  Device.h  Effects.c  Effects.h  Fonts.c  Fonts.h  Graphics.c  Graphics.h  Navigation.c  Navigation.h  QRCode.c  QRCode.h  Res.c  Res.h  Resources.c  Resources.h  Simulation.c  Simulation.h  Simulations.c  Simulations.h  Strings.c  Strings.h  Templates.c  Templates.h  Tools.c  Tools.h  Views.c  Views.h  WidgetSet.c  WidgetSet.h  _ApplicationAbout.h  _ApplicationAirBubbleDetector.h  _ApplicationApplication.h  _ApplicationAudioVolumeControl.h  (+254 more)
Core/Inc/: FreeRTOSConfig.h  TestProcess.h  infusion_platform.h  infusion_safety.h  main.h  modbus.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/PlatformPackage/RGB565/: ewextbmp_RGB565.c  ewextfnt.c  ewextgfx.c  ewextgfx.h  ewextpxl_RGB565.c  ewextsvg.c  ewgfx.c  ewgfx.inc  ewgfxattrtext.c  ewgfxbidi.c  ewgfxcore.c  ewgfxdriver.c  ewgfxsvg.c  ewgfxtasks.c  libewgfx-m7-keil.lib  libewgfx-m7-r180-keil.lib  libewgfx-m7-r270-keil.lib  libewgfx-m7-r90-keil.lib
Core/QRCode/: CMakeLists.txt  Makefile
Core/QRCode/EmWi/: QRCode.ewi  QRCode.ewu
Core/QRCode/Include/: QRCodeBinding.h
Core/QRCode/Platform/Intrinsics/: CMakeLists.txt
Core/QRCode/Platform/Intrinsics/Include/: ModuleEntry.h
Core/QRCode/Platform/Intrinsics/Source/: ModuleEntry.c
Core/QRCode/Source/: QRCodeBinding.c
Core/Src/: DeviceDriver.c  DeviceDriver.h  ModbusDeviceInf.c  ModbusDeviceInf.c.bak  ModbusDeviceInf.h  TestPressure.c  TestPressure.h  Uart.c  Uart.h  ewconfig.h  ewconfig.h.bak  ewmain.c  main.c  main.c.bak  modbus.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  stm32h7xx_it.c.bak
Core/TargetSpecific/: ew_bsp_clock.c  ew_bsp_clock.c.bak  ew_bsp_console.c  ew_bsp_console.c.bak  ew_bsp_display.c  ew_bsp_event.c  ew_bsp_graphics.c  ew_bsp_graphics.h  ew_bsp_inout.c  ew_bsp_inout.h  ew_bsp_os.c  ew_bsp_os.h  ew_bsp_system.c  ew_bsp_system.c.bak  ew_bsp_touch.c  ew_bsp_touch.c.bak  stm32h743i_eval_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
TestInfusion/: Application.ewu  Application.ewu.bak  Climate.ewu  ClimateCabinet.ews  ColorStatistic.txt  Infusion.ewu  Infusion.ewu.bak  InfusionApplication.ewu  InfusionApplication.ewu.bak  TestInfusion.ewp  TestInfusion.ewp.bak  TestInfusion.ews
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c
(+103 files in other folders)
